--- a/domnarkomfina 1.html
+++ b/domnarkomfina 1.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
     <title>Дом Наркомфина</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <script src="javascripts/jquery-3.5.1.js" charset="utf-8"></script>
@@ -24,13 +26,14 @@
   </head>
   <body>
     <div class="menubar">
-      <a href="#"><img src="images/logo.svg" alt=""></a>
-      <a href="#">О проекте</a>
+      <a href="domnarkomfina 1.html"><img src="images/logo.svg" alt=""></a>
+      <a href="about.html">О проекте</a>
 
     </div>
     <nav class="sidebar">
-      <p><a href="#s1">Дом Наркомфина</a></p>
+
           <ul>
+            <li><a href="#s1">Дом Наркомфина</a></li>
             <li><a href="#s2">История создания</a></li>
             <ul>
               <li><a href="#s2s1">Идеология</a></li>
@@ -69,7 +72,7 @@
       <h1 id="s1">Дом Наркомфина</h1>
       <p><strДом Наркомфина>Дом Наркомфина</a></strong>— один из ключевых памятников жилой архитектуры <a href="https://ru.wikipedia.org/wiki/Конструктивизм_(искусство)">конструктивизма</a>, «опытный дом переходного типа». Построен в <a href="https://ru.wikipedia.org/wiki/1928_год">1928</a>—<a href="https://ru.wikipedia.org/wiki/1930_год">1930 годах </a>по проекту архитекторов <a href="https://ru.wikipedia.org/wiki/Гинзбург,_Моисей_Яковлевич">Моисея Гинзбурга</a>, <a href="https://ru.wikipedia.org/wiki/Милинис,_Игнатий_Францевич">Игнатия Милиниса</a> и инженера <a href="https://ru.wikipedia.org/wiki/Сергей_Львович_Прохоров">Сергея Прохорова</a> для работников <a href="https://ru.wikipedia.org/wiki/Народный_комиссариат_финансов_СССР">Народного комиссариата финансов СССР</a> (Наркомфина). Находится в Москве на <a href="https://ru.wikipedia.org/wiki/Новинский_бульвар">Новинском бульваре</a> по адресу дом № 25, корпус 1.</p>
       <p>Долгое время находился в аварийном состоянии, был трижды включен в список «100 главных зданий мира, которым грозит уничтожение». В 2017 году началась реставрация по проекту мастерской Алексея Гинзбурга, внука <a href="https://ru.wikipedia.org/wiki/Гинзбург,_Моисей_Яковлевич">М.Я. Гинзбурга</a>. </p>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Dom_Narkomfin_under_renovation.jpg/600px-Dom_Narkomfin_under_renovation.jpg" alt="Наркомфин">
+      <img src="images/narkomfin 1.jpg" alt="Наркомфин">
       <h2 id="s2">История создания</h2>
 
       <p>Дом Наркомфина, или 2-й дом Совнаркома РСФСР, стал одним из экспериментальных домов, построенных по результатам теоретических исследований Секции типизации Стройкома РСФСР, работавшей в 1928—1929 годы под руководством М. Я. Гинзбурга. Работе секции предшествовал конкурс на «эскизный проект жилого дома трудящихся», проведенный журналом «Современная архитектура» (Гинзбург подал на конкурс проект «Коммунального дома А-1»), выставка проектов конкурса в 1927 году, и строительство дома Госстраха на Малой Бронной (1926—1927, М. Я. Гинзбург и В. Н. Владимиров). И журнал, и конкурс, и работа Секции типизации были проектами ОСА (Объединения современных архитекторов).</p>
