--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
   <body>
     <div class="menubar">
 
-      <a href="domnarkomfina 1.html"><img src="images/logo.svg" alt=""></a>
+      <a href="index.html"><img src="images/logo.svg" alt=""></a>
       <a href="about.html">О проекте</a>
     </div>
       <section>
