--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         display: block;
         position: relative;
       }
-      body::before{
+      /* body::before{
         content: "";
         position: absolute;
         left: 0;
@@ -26,7 +26,7 @@
         height: 100%;
         display: block;
         opacity: .2;
-      }
+      } */
       html{
         background: #bbb;
         position: relative;
