--- a/about.html
+++ b/about.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="stylesheets/style.css">
-    <title></title>
+    <title>О проекте</title>
     <style media="screen">
       body{
         width: 1440px;
