--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <meta property="og:type" content="article">
-<meta property="og:url" content="karinamulk.github.io">
-<meta property="og:title" content="Wikimedium">
-<meta property="og:description" content="Учебный проект по HTML/CSS">
-<meta property="og:image" content="https://karinamulk.github.io/newwikimedium-/images/narkomfin%201.jpg">
+    <meta property="og:url" content="karinamulk.github.io">
+    <meta property="og:title" content="Wikimedium">
+    <meta property="og:description" content="Учебный проект по HTML/CSS">
+    <meta property="og:image" content="https://karinamulk.github.io/newwikimedium-/images/narkomfin%201.jpg">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="stylesheets/style.css">
@@ -30,6 +30,8 @@
       <a href="narkomfin.html"></a>
     </div>
     <div class="index_item">
+      <img src="images/anime.jpg" alt="Наркомфин">
+
       <h1>Аниме</h1>
       <p>Аниме — японская анимация. В отличие от мультфильмов других стран, предназначенных в основном для просмотра детьми, бо́льшая часть выпускаемого аниме рассчитана на подростковую и взрослую аудитории, и во многом за счёт этого имеет высокую популярность в мире. Аниме отличается характерной манерой отрисовки персонажей и фонов. Издаётся в форме телевизионных сериалов, а также фильмов, распространяемых на видеоносителях или предназначенных для кинопоказа. Сюжеты могут описывать множество персонажей, отличаться разнообразием мест и эпох, жанров и стилей.</p>
       <a href="anime.html"></a>
