--- a/narkomfin.html
+++ b/narkomfin.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="karinamulk.github.io">
+    <meta property="og:title" content="Wikimedium">
+    <meta property="og:description" content="Дом Наркомфина">
+    <meta property="og:image" content="https://karinamulk.github.io/newwikimedium-/images/narkomfin%201.jpg">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <title>Дом Наркомфина</title>
