--- a/about.html
+++ b/about.html
@@ -9,11 +9,14 @@
     <title>О проекте</title>
     <style media="screen">
       body{
-        width: 1440px;
+        /* width: 1440px; */
+        width:100% ;
+
         margin: 0 auto;
         background: white;
 
-        height: 3252px;
+        /* height: 3252px; */
+        height: auto;
         display: block;
         position: relative;
       }
@@ -37,6 +40,7 @@
         display: flex;
         justify-content: space-between;
         padding-top: 70px;
+
       }
       section div {
         width: 50%;
@@ -44,9 +48,11 @@
         padding-left: 40px;
       }
       section h1, p {
-        width: 550px;
+        /* width: 550px; */
+        width: 76%;
         margin: 0 auto;
       }
+
       section h1,
       .bottom_block h1{
         font-size: 40px;
@@ -65,7 +71,7 @@
       }
       .bottom_block p,
       .bottom_block h1 {
-        width: 800px;
+        width: 55%;
         margin-left: auto;
         margin-right: auto;
       }
@@ -87,7 +93,9 @@
         color: white;
         background: black;
         border-color: black;
+        margin-bottom: 200px;
       }
+
     </style>
   </head>
   <body>
@@ -107,10 +115,10 @@
       </section>
       <section>
         <div>
-          <img src="images/about2.png" alt="">
+          <img  src="images/about2.png" alt="">
         </div>
         <div>
-          <h1>С нуля до первого сайта под компьютеры, смартфоны и планшеты</h1>
+          <h1>С нуля до первого сайта под&nbsp;компьютеры, смартфоны и&nbsp;планшеты</h1>
           <p>Чтобы начать изучать веб-вёерстку на этом проекте,не требуется каких-то специальных знаний, кроме базового умения пользоваться компьютером</p>
         </div>
       </section>
@@ -119,13 +127,13 @@
           <h1>Реальный проект, реальный рабочий процесс</h1>
           <p>Обучение приближено к работе в реальной жизни, работа разбита на этапы от типографики, создания меню и использования эффектов, до адаптации под мобильные устройства и использования JavaScript скриптов</p>
         </div>
-        <div>
+        <div class="kart">
           <img src="images/about3.png" alt="">
         </div>
       </section>
       <div class="bottom_block">
       <h1>Возможность самостоятельного и&nbsp;курируемого обучения</h1>
-      <p>Вы можете обучаться самостоятельно по исходному коду проекта, выложенному на Github, или записаться на курс «Основы веб–вёрстки»&nbsp;в Школе Дизайна НИУ ВШЭ</p>
+      <p>Вы можете обучаться самостоятельно по&nbsp;исходному коду проекта, выложенному на&nbsp;Github, или записаться на курс «Основы веб–вёрстки»&nbsp;в Школе Дизайна НИУ ВШЭ</p>
       <a class="btn" href="#">Исходный код на Github</a>
       <a class="btn btn-black" href="#">Курс в Школе Дизайна</a>
       </div>
