--- a/about.html
+++ b/about.html
@@ -3,6 +3,11 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="karinamulk.github.io">
+    <meta property="og:title" content="Wikimedium">
+    <meta property="og:description" content="О проекте">
+    <meta property="og:image" content="https://karinamulk.github.io/newwikimedium-/images/about1.png">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="stylesheets/style.css">
